Fix spacings

--- a/app/simulateur/simulateur.module.css
+++ b/app/simulateur/simulateur.module.css
@@ -1,5 +1,5 @@
 .shadow {
-  position: fixed;
+  position: absolute;
   z-index: -1;
   top: 0;
   right: 0;
